syntax = "proto3";

package proto;

option go_package = "/proto";

service NotificationService {
  rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {}
}

message SendNotificationRequest {
  string message = 1;
  string recipient = 2;
}

message SendNotificationResponse {}
